@@ -36,9 +36,12 @@
  * stat() checking of files on load can be disabled with _preload_checks (TODO: 678)
  * added --no-stat-push to set _preload_checks=0 before initialization (TODO: 679)
  * added the _comment_over_image variable (TODO: r683)
- * key r is bound to 'rotate90', key R to 'rotate270'
+ * default key r is bound to 'rotate90', key R to 'rotate270'
  * can be invoked without stdin; e.g. from an X menu (TODO: 688)
  * added the 'descload' command (TODO: 689)
+ * when repeating searching with repeat_last, will use last direction (TODO: 695)
+ * '?' key is now assigned to backward search (TODO: 695)
+ * default 'C-p' key is now assigned to repeat last backward search (TODO: 695)
 
                 Version 0.4
 
